--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,6 +29,7 @@ $selectLabelPadding: $space-2;
 $selectHighlight: $light-gray;
 
 $font-family: "Thinx", Helvetica Neue, Helvetica, Arial;
+$breakpoint-md: 1024px;
 $breakpoint: 1340px;
 
 
